<resources>
    <string name="app_name">bleTank</string>
    <string name="ble_not_supported">BLE not supported</string>
    <string name="connect_button">Connect</string>
    <string name="disconnect_button">Disconnect</string>
    <string name="force_disconnect_button">ForceDisconnect</string>
    <string name="engine_start">Engine Start</string>
    <string name="engine_stop">Engine Stop</string>
    <string name="braking">Brake</string>
    <string name="forward">↑</string>
    <string name="backward">↓</string>
    <string name="turn_left">←</string>
    <string name="turn_right">→</string>
    <string name="scan_button">Scan</string>
    <string name="cancel_button">Cancel</string>

    // command
    <string name="cmd_engine_start">256</string>
    <string name="cmd_engine_stop">257</string>
    <string name="cmd_braking">258</string>
    <string name="cmd_forward">259</string>
    <string name="cmd_backward">260</string>
    <string name="cmd_turn_left">261</string>
    <string name="cmd_turn_right">262</string>
</resources>
